# FlipFlop

./: COPYRIGHT  Cargo.toml  README.md  build.rs
res/shaders/: board.frag  board.vert
src/: assets.rs  board.rs  camera.rs  circuit.rs  colored.rs  config.rs  controller.rs  counter.rs  cursor.rs  debug_text.rs  depot.rs  direction.rs  editor.rs  instance.rs  ivec.rs  main.rs  pin.rs  rect.rs  screen_vertex.rs  simulation.rs  tile.rs  view.rs  viewport.rs  wire.rs  wire_colored.rs
src/board/: background.rs  background_board.wgsl  board.wgsl  mod.rs
src/cursor/: cursor_outline.wgsl  mod.rs  outline.rs
src/rect/: mod.rs  rect.wgsl
src/screen_vertex/: mod.rs  screen.wgsl
src/shaders/: board.frag  board.vert  cursor_outline.frag  cursor_outline.wgsl  rect.vert  screen.vert  wire.vert
src/uv_sprite/: mod.rs  render.rs  uv_sprite.vert
