[package]
name = "flipflop"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "0.22"
bytemuck = "1.5"
env_logger = "0.8"
futures-executor = "0.3"
futures-util = "0.3"
glam = "0.17.1"
image = "0.23"
once_cell = "1.7"
wgpu = "0.8"
wgpu_glyph = "0.12"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
shaderc = "0.7"
