[package]
name = "flipflop"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "0.22"
bytemuck = "1.7"
env_logger = "0.9"
futures-executor = "0.3"
futures-util = "0.3"
glam = "0.19"
image = "0.23"
once_cell = "1.8"
wgpu = "0.11"
wgpu_glyph = "0.15"
winit = "0.25"
