[package]
name = "flipflop"
version = "0.1.0"
authors = ["Adam Gausmann <agausmann@fastmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "1.0"
bytemuck = "1.12"
env_logger = "0.9"
futures-executor = "0.3"
glam = "0.22"
image = "0.24"
once_cell = "1.16"
wgpu = "0.14"
wgpu_glyph = "0.18"
winit = "0.27"
